--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WebTape | Grow - Upskill effectively</title>
+  <title>My Workshop App - Upskill effectively</title>
   <meta name="description" content="One stop solution to host online workshop. Let technical stuff manage by us so that you focus on creating content.">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
